[gd_scene load_steps=102 format=3 uid="uid://b7paocrh1u781"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_pi0nl"]
[ext_resource type="Texture2D" uid="uid://dpu4kdoc4af2q" path="res://Images/Player/Rat_sprites/casi_full_rat_sheet.png" id="2_fsyou"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2d.gd" id="4_lktpr"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="5_ry2l1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7eptk"]
atlas = ExtResource("2_fsyou")
region = Rect2(1296, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2yqx"]
atlas = ExtResource("2_fsyou")
region = Rect2(1344, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqvol"]
atlas = ExtResource("2_fsyou")
region = Rect2(192, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fy63"]
atlas = ExtResource("2_fsyou")
region = Rect2(240, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt7mt"]
atlas = ExtResource("2_fsyou")
region = Rect2(288, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb356"]
atlas = ExtResource("2_fsyou")
region = Rect2(336, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sepi"]
atlas = ExtResource("2_fsyou")
region = Rect2(336, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_bem8u"]
atlas = ExtResource("2_fsyou")
region = Rect2(384, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xv1o"]
atlas = ExtResource("2_fsyou")
region = Rect2(432, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiasu"]
atlas = ExtResource("2_fsyou")
region = Rect2(0, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_teinb"]
atlas = ExtResource("2_fsyou")
region = Rect2(48, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ern0n"]
atlas = ExtResource("2_fsyou")
region = Rect2(96, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_40vk7"]
atlas = ExtResource("2_fsyou")
region = Rect2(144, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnaiu"]
atlas = ExtResource("2_fsyou")
region = Rect2(1392, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nvm3"]
atlas = ExtResource("2_fsyou")
region = Rect2(1440, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5m2so"]
atlas = ExtResource("2_fsyou")
region = Rect2(1200, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa04m"]
atlas = ExtResource("2_fsyou")
region = Rect2(1248, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdk8j"]
atlas = ExtResource("2_fsyou")
region = Rect2(576, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa1hh"]
atlas = ExtResource("2_fsyou")
region = Rect2(624, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8w7m"]
atlas = ExtResource("2_fsyou")
region = Rect2(672, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_byluw"]
atlas = ExtResource("2_fsyou")
region = Rect2(720, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahwv"]
atlas = ExtResource("2_fsyou")
region = Rect2(768, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_orc46"]
atlas = ExtResource("2_fsyou")
region = Rect2(864, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hukvq"]
atlas = ExtResource("2_fsyou")
region = Rect2(912, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2dl7"]
atlas = ExtResource("2_fsyou")
region = Rect2(1008, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5nl5"]
atlas = ExtResource("2_fsyou")
region = Rect2(1056, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj1d2"]
atlas = ExtResource("2_fsyou")
region = Rect2(960, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r5sn"]
atlas = ExtResource("2_fsyou")
region = Rect2(1104, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdcu2"]
atlas = ExtResource("2_fsyou")
region = Rect2(1152, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ykb3r"]
atlas = ExtResource("2_fsyou")
region = Rect2(480, 0, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljeus"]
atlas = ExtResource("2_fsyou")
region = Rect2(528, 0, 48, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_jein8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eptk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2yqx")
}],
"loop": true,
"name": &"rat_fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqvol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fy63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt7mt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb356")
}],
"loop": true,
"name": &"rat_hit_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sepi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bem8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xv1o")
}],
"loop": true,
"name": &"rat_hit_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiasu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teinb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ern0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40vk7")
}],
"loop": true,
"name": &"rat_idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnaiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nvm3")
}],
"loop": true,
"name": &"rat_jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5m2so")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa04m")
}],
"loop": true,
"name": &"rat_run",
"speed": 10.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_cdk8j")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_pa1hh")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_d8w7m")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_byluw")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_7ahwv")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_orc46")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_hukvq")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_f2dl7")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_q5nl5")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_f2dl7")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_aj1d2")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_f2dl7")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_q5nl5")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_f2dl7")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_aj1d2")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_f2dl7")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_q5nl5")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_f2dl7")
}],
"loop": true,
"name": &"rat_sleep",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r5sn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdcu2")
}],
"loop": true,
"name": &"rat_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ykb3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljeus")
}],
"loop": true,
"name": &"rat_wall",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_n3ale"]
atlas = ExtResource("2_fsyou")
region = Rect2(1296, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka5bn"]
atlas = ExtResource("2_fsyou")
region = Rect2(1344, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuxdc"]
atlas = ExtResource("2_fsyou")
region = Rect2(240, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhxha"]
atlas = ExtResource("2_fsyou")
region = Rect2(288, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3836"]
atlas = ExtResource("2_fsyou")
region = Rect2(336, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfsky"]
atlas = ExtResource("2_fsyou")
region = Rect2(192, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxc63"]
atlas = ExtResource("2_fsyou")
region = Rect2(336, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6v3o"]
atlas = ExtResource("2_fsyou")
region = Rect2(384, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_k68c8"]
atlas = ExtResource("2_fsyou")
region = Rect2(432, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1yac"]
atlas = ExtResource("2_fsyou")
region = Rect2(0, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jrpw"]
atlas = ExtResource("2_fsyou")
region = Rect2(48, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4vuv"]
atlas = ExtResource("2_fsyou")
region = Rect2(96, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_axp0d"]
atlas = ExtResource("2_fsyou")
region = Rect2(144, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf0tn"]
atlas = ExtResource("2_fsyou")
region = Rect2(1392, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hksgr"]
atlas = ExtResource("2_fsyou")
region = Rect2(1440, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia3x0"]
atlas = ExtResource("2_fsyou")
region = Rect2(1200, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8wi0"]
atlas = ExtResource("2_fsyou")
region = Rect2(1248, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wt07"]
atlas = ExtResource("2_fsyou")
region = Rect2(576, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uest"]
atlas = ExtResource("2_fsyou")
region = Rect2(624, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bqaw"]
atlas = ExtResource("2_fsyou")
region = Rect2(672, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxtpv"]
atlas = ExtResource("2_fsyou")
region = Rect2(720, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cars"]
atlas = ExtResource("2_fsyou")
region = Rect2(768, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_43t2a"]
atlas = ExtResource("2_fsyou")
region = Rect2(864, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_eke3d"]
atlas = ExtResource("2_fsyou")
region = Rect2(912, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_68c7c"]
atlas = ExtResource("2_fsyou")
region = Rect2(1008, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjqry"]
atlas = ExtResource("2_fsyou")
region = Rect2(1056, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksqt8"]
atlas = ExtResource("2_fsyou")
region = Rect2(1104, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bbd6"]
atlas = ExtResource("2_fsyou")
region = Rect2(1152, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_foots"]
atlas = ExtResource("2_fsyou")
region = Rect2(480, 33, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hvvm"]
atlas = ExtResource("2_fsyou")
region = Rect2(528, 33, 48, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_jlrpo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3ale")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka5bn")
}],
"loop": true,
"name": &"ribbon_fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuxdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhxha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3836")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfsky")
}],
"loop": true,
"name": &"ribbon_hit_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxc63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6v3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k68c8")
}],
"loop": true,
"name": &"ribbon_hit_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1yac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jrpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4vuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axp0d")
}],
"loop": true,
"name": &"ribbon_idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf0tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hksgr")
}],
"loop": true,
"name": &"ribbon_jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia3x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8wi0")
}],
"loop": true,
"name": &"ribbon_run",
"speed": 10.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_5wt07")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_3uest")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_2bqaw")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_jxtpv")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_5cars")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_43t2a")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_eke3d")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_68c7c")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_yjqry")
}],
"loop": false,
"name": &"ribbon_sleep",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksqt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bbd6")
}],
"loop": true,
"name": &"ribbon_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_foots")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvvm")
}],
"loop": true,
"name": &"ribbon_wall",
"speed": 3.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_iqq2g"]
atlas = ExtResource("2_fsyou")
region = Rect2(1296, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rplw4"]
atlas = ExtResource("2_fsyou")
region = Rect2(1344, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuyqv"]
atlas = ExtResource("2_fsyou")
region = Rect2(192, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ajml"]
atlas = ExtResource("2_fsyou")
region = Rect2(240, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr8ua"]
atlas = ExtResource("2_fsyou")
region = Rect2(288, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ov63w"]
atlas = ExtResource("2_fsyou")
region = Rect2(336, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi2jm"]
atlas = ExtResource("2_fsyou")
region = Rect2(336, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_s41ym"]
atlas = ExtResource("2_fsyou")
region = Rect2(384, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dn4iw"]
atlas = ExtResource("2_fsyou")
region = Rect2(432, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_te6oy"]
atlas = ExtResource("2_fsyou")
region = Rect2(0, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_65vvx"]
atlas = ExtResource("2_fsyou")
region = Rect2(48, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp43f"]
atlas = ExtResource("2_fsyou")
region = Rect2(96, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6yuc"]
atlas = ExtResource("2_fsyou")
region = Rect2(144, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_aknuq"]
atlas = ExtResource("2_fsyou")
region = Rect2(1392, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_iri3u"]
atlas = ExtResource("2_fsyou")
region = Rect2(1440, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajnbm"]
atlas = ExtResource("2_fsyou")
region = Rect2(1200, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpqus"]
atlas = ExtResource("2_fsyou")
region = Rect2(1248, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3840m"]
atlas = ExtResource("2_fsyou")
region = Rect2(576, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dthg"]
atlas = ExtResource("2_fsyou")
region = Rect2(624, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7h2v"]
atlas = ExtResource("2_fsyou")
region = Rect2(672, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rb7ds"]
atlas = ExtResource("2_fsyou")
region = Rect2(720, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qc54"]
atlas = ExtResource("2_fsyou")
region = Rect2(768, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpuli"]
atlas = ExtResource("2_fsyou")
region = Rect2(816, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7cnn"]
atlas = ExtResource("2_fsyou")
region = Rect2(864, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwoi6"]
atlas = ExtResource("2_fsyou")
region = Rect2(912, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0l22"]
atlas = ExtResource("2_fsyou")
region = Rect2(960, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_4b5i8"]
atlas = ExtResource("2_fsyou")
region = Rect2(1008, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_jwu4h"]
atlas = ExtResource("2_fsyou")
region = Rect2(1056, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cnhb"]
atlas = ExtResource("2_fsyou")
region = Rect2(1104, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_asrhd"]
atlas = ExtResource("2_fsyou")
region = Rect2(1152, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_q58iy"]
atlas = ExtResource("2_fsyou")
region = Rect2(480, 66, 48, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_scm6i"]
atlas = ExtResource("2_fsyou")
region = Rect2(528, 66, 48, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_7blg2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqq2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rplw4")
}],
"loop": true,
"name": &"weapon_fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuyqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ajml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr8ua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ov63w")
}],
"loop": true,
"name": &"weapon_hit_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi2jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s41ym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dn4iw")
}],
"loop": true,
"name": &"weapon_hit_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_te6oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65vvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp43f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6yuc")
}],
"loop": true,
"name": &"weapon_idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aknuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iri3u")
}],
"loop": true,
"name": &"weapon_jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajnbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpqus")
}],
"loop": true,
"name": &"weapon_run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3840m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dthg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7h2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rb7ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qc54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpuli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7cnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwoi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0l22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4b5i8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jwu4h")
}],
"loop": true,
"name": &"weapon_sleep",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cnhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asrhd")
}],
"loop": true,
"name": &"weapon_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q58iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scm6i")
}],
"loop": true,
"name": &"weapon_wall",
"speed": 3.0
}]

[sub_resource type="Resource" id="Resource_45fv3"]
script = ExtResource("5_ry2l1")
duration = 0.0
transition = 0
ease = 2

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
collision_mask = 32781
platform_on_leave = 2
platform_floor_layers = 4294901760
script = ExtResource("1_pi0nl")

[node name="player_collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(5, 1, 5, -8, 12, -8, 12, 0, 12, 3, 12, 16, 5, 16, 0, 16, 0, 1)

[node name="rat" type="AnimatedSprite2D" parent="player_collision"]
texture_filter = 1
position = Vector2(4, 3.5)
sprite_frames = SubResource("SpriteFrames_jein8")
animation = &"rat_wall"

[node name="ribbon" type="AnimatedSprite2D" parent="player_collision"]
visible = false
position = Vector2(4, 3.5)
sprite_frames = SubResource("SpriteFrames_jlrpo")
animation = &"ribbon_sleep"

[node name="weapon" type="AnimatedSprite2D" parent="player_collision"]
visible = false
position = Vector2(4, 3.5)
sprite_frames = SubResource("SpriteFrames_7blg2")
animation = &"weapon_sleep"

[node name="RayCastFrontUp" type="RayCast2D" parent="player_collision"]
position = Vector2(11, -6)
target_position = Vector2(9, 0)

[node name="RayCastFrontMid" type="RayCast2D" parent="player_collision"]
position = Vector2(11, 3)
target_position = Vector2(9, 0)

[node name="RayCastFrontDown" type="RayCast2D" parent="player_collision"]
position = Vector2(10, 12)
target_position = Vector2(10, 0)

[node name="phantom_player_camera" type="Node2D" parent="." groups=["phantom_player_camera"]]
script = ExtResource("4_lktpr")
priority = 5
snap_to_pixel = true
tween_resource = SubResource("Resource_45fv3")
tween_on_load = false

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashDurationTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashResetTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="DashDurationTimer" to="." method="_on_dash_duration_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
